--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,28 @@ spring.jackson.time-zone= UTC
 
 app.jwtSecret= JWTSuperSecretKey
 app.jwtExpirationInMs = 604800000
+
+
+#==MAIL CONFIGURATION
+#debug=true
+spring.mail.host=smtp.gmail.com
+spring.mail.username=mihir.microdonation@gmail.com
+spring.mail.port=25
+spring.mail.password=mihir@1234
+
+#spring.mail.host=smtp.gmail.com
+#spring.mail.username=devteam@bigkittylabs.com
+#spring.mail.port=587
+#spring.mail.password=bkldevp3rmp@55
+
+# Other properties
+spring.mail.properties.mail.debug=true
+spring.mail.properties.mail.smtp.auth=true
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# SSL, post 465
+#spring.mail.properties.mail.smtp.socketFactory.port = 465
+#spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+
+#=========================================================================================================
