--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,18 @@
 server.port= 7570
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url= jdbc:mysql://localhost:32768/microdonation?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url= jdbc:mysql://localhost:3306/microdonation?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username= root
-spring.datasource.password= admin@123
+spring.datasource.password= root
 
 ## Hibernate Properties
-
+hibernate.show_sql=true
+hibernate.hbm2ddl.auto=update
+hibernate.id.new_generator_mappings=false
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
+entitymanager.packagesToScan=com.microdonation.microdonation
 
 ## Hibernate Logging
 logging.level.org.hibernate.SQL= DEBUG
